--- a/package.json
+++ b/package.json
@@ -32,10 +32,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -45,6 +42,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
-    "mongoose": "^5.3.3"
+    "mongoose": "^5.3.3",
+    "webpack": "^4.20.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.9"
   }
 }
