--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
     "popper.js": "^1.14.4",
@@ -31,8 +30,7 @@
     "react-dom": "^16.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack-cli": "^3.1.2"
+    "url-loader": "^1.1.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -41,9 +39,11 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "html-webpack-plugin": "^3.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.3",
     "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.9"
   }
