--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
+    "start": "node src/server/server.js",
     "transpile": "babel src -d dist --copy-files",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors"
   },
   "author": "Maurice Murphy",
   "license": "ISC",
