--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/server.js",
     "transpile": "babel src -d dist --copy-files",
-    "build": "webpack --mode production",
-    "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors"
+    "build": "webpack --mode production"
   },
   "author": "Maurice Murphy",
   "license": "ISC",
